fixed testimonials spacing

--- a/src/modules/ContactBlock.scss
+++ b/src/modules/ContactBlock.scss
@@ -35,7 +35,6 @@
       }
     }
     button {
-      margin-top: 20px;
       background-color: #c4d6c4;
       border: 3px solid #c4d6c4;
       padding: 8px 30px;
